<resources>
    <string name="app_name">BYEBYE Wifi</string>
    <string name="main_btn_wifi_localizer">WIFI LOCALIZER</string>
    <string name="main_btn_distance_ap">DISTANCE AP</string>
    <string name="main_btn_dictionary_attack">DICTIONARY ATTACK</string>
    <string name="main_btn_wifi_analyzer">WIFI ANALYZER</string>
    <string name="main_btn_data_from_db">DATA FROM DB</string>
    <string name="wifi_localizer_btn_start">  START</string>
    <string name="wifi_localizer_btn_stop">  STOP</string>
    <string name="ssidLBL">SSID</string>
    <string name="bssidLBL">BSSID</string>
    <string name="pwrSignalLBL">PWR</string>
    <string name="headerLocalizerLBL">LOCALIZE</string>
    <string name="frequencyLBL">HZ</string>
    <string name="longitudeLBL">LONG</string>
    <string name="latitudeLBL">LAT</string>
    <string name="exportToFileFromDbBTNlbl">EXPORT TO FILE</string>
    <string name="sendFileToEmailFromDbBTNlbl">SEND TO EMAIL</string>
    <string name="sendFileToWhatsUpFromDbBTNlbl">SEND WHAT\'S UP</string>
    <string name="resetDbBTNlbl">RESET DB</string>
    <string name="makeAchoose">MAKE A CHOOSE!</string>
    <string name="saveToDbCheackBoxWifiLocalizer">SAVE DATA TO DB</string>
    <string name="gnssStatusWifiLocilizeTitle">Gnss:</string>
</resources>